--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
 @theme {
     --color-primary: #fe2c55;
 }
+@custom-variant dark (&:where(.dark, .dark *));
 
 .hidden-scroll-bar {
     -ms-overflow-style: none; /* Internet Explorer 10+ */
@@ -65,3 +66,4 @@ input.video-progress::-moz-range-thumb {
 ::-webkit-scrollbar-thumb {
     border-radius: 9999px;
   }
+  
